feat(backend,frontend): implement comprehensive notification system
Closes #11

## Summary
Adds multi-channel notification system with in-app, email, and webhook
delivery. Users can configure notification preferences per event type
and channel. Admins can set up global webhooks and monitor security
events via audit log.

## Backend Changes
- Add 11 notification types (job, agent, security, system categories)
- Implement NotificationDispatcher for centralized routing
- Add WebSocket hub for real-time in-app notifications
- Add webhook service with platform detection (Discord, Slack, Teams)
- Add agent offline monitoring with configurable buffer period
- Add audit logging for security events with severity levels
- Add 4 database migrations for notification infrastructure
- Add 10 email templates for notification types
- Enhance Mailgun provider with EU region support

## Frontend Changes
- Add NotificationBell component with real-time WebSocket connection
- Add Notification Center page with filtering and bulk actions
- Add Admin Audit Log page with severity filtering
- Add notification preferences in user settings
- Add admin notification settings (global webhook, agent buffer)
- Add full i18n support for 6 languages

## API Endpoints Added
- GET/PUT/DELETE /user/notifications - Notification management
- GET/POST/PUT/DELETE /user/webhooks - User webhook management
- GET /user/notifications/ws - WebSocket connection
- GET/PUT /admin/notification-settings - Global settings
- GET /admin/audit-logs - Audit log with filtering

## Database Tables Added
- notifications - Notification history with delivery status
- user_notification_preferences - Per-user, per-type settings
- user_webhooks - User webhook configurations
- agent_offline_buffer - Agent disconnect tracking
- audit_log - Security event history

## Documentation Added
- User guide for notification preferences and webhooks
- Admin guide for notification settings and audit log
- Architecture reference for notificatio

--- a/frontend/public/locales/de/admin.json
+++ b/frontend/public/locales/de/admin.json
@@ -999,6 +999,7 @@
         "fromEmail": "Absender-E-Mail",
         "fromName": "Absendername",
         "domain": "Domain",
+        "region": "Region",
         "monthlyLimit": "Monatliches Limit",
         "skipTlsVerify": "TLS-Zertifikatprüfung überspringen (unsicher, nicht empfohlen)"
       },
@@ -1018,7 +1019,9 @@
         "smtp": "SMTP",
         "encryptionNone": "Keine (Port 25)",
         "encryptionStarttls": "STARTTLS (Port 587)",
-        "encryptionTls": "TLS/SSL (Port 465)"
+        "encryptionTls": "TLS/SSL (Port 465)",
+        "regionUS": "US (api.mailgun.net)",
+        "regionEU": "EU (api.eu.mailgun.net)"
       },
       "buttons": {
         "edit": "Konfiguration bearbeiten",
