--- a/frontend/public/locales/de/auth.json
+++ b/frontend/public/locales/de/auth.json
@@ -19,7 +19,8 @@
     "accountDisabled": "Ihr Konto wurde deaktiviert. Bitte kontaktieren Sie Ihren Administrator.",
     "invalidMfaResponse": "Ungültige MFA-Antwort vom Server",
     "ldapFailed": "LDAP-Authentifizierung fehlgeschlagen",
-    "accountPendingApproval": "Konto erstellt, wartet auf Admin-Genehmigung. Bitte kontaktieren Sie Ihren Administrator."
+    "accountPendingApproval": "Konto erstellt, wartet auf Admin-Genehmigung. Bitte kontaktieren Sie Ihren Administrator.",
+    "genericError": "Ein Fehler ist aufgetreten"
   },
   "mfa": {
     "title": "Zwei-Faktor-Authentifizierung",
