--- a/frontend/public/locales/de/navigation.json
+++ b/frontend/public/locales/de/navigation.json
@@ -19,7 +19,8 @@
     "userManagement": "Benutzerverwaltung",
     "presetJobs": "Vorlagen-Aufträge",
     "jobWorkflows": "Auftrags-Workflows",
-    "diagnostics": "Diagnose"
+    "diagnostics": "Diagnose",
+    "auditLog": "Audit-Protokoll"
   },
   "userMenu": {
     "userSettings": "Benutzereinstellungen",
