--- a/frontend/public/locales/en/auth.json
+++ b/frontend/public/locales/en/auth.json
@@ -19,7 +19,8 @@
     "accountDisabled": "Your account has been disabled. Please contact your administrator.",
     "invalidMfaResponse": "Invalid MFA response from server",
     "ldapFailed": "LDAP authentication failed",
-    "accountPendingApproval": "Account created but pending admin approval. Please contact your administrator."
+    "accountPendingApproval": "Account created but pending admin approval. Please contact your administrator.",
+    "genericError": "An error occurred"
   },
   "mfa": {
     "title": "Two-Factor Authentication",
