--- a/frontend/public/locales/es/auth.json
+++ b/frontend/public/locales/es/auth.json
@@ -19,7 +19,8 @@
     "accountDisabled": "Tu cuenta ha sido deshabilitada. Por favor, contacta a tu administrador.",
     "invalidMfaResponse": "Respuesta MFA inválida del servidor",
     "ldapFailed": "Autenticación LDAP fallida",
-    "accountPendingApproval": "Cuenta creada pero pendiente de aprobación del administrador. Por favor, contacta a tu administrador."
+    "accountPendingApproval": "Cuenta creada pero pendiente de aprobación del administrador. Por favor, contacta a tu administrador.",
+    "genericError": "Se produjo un error"
   },
   "mfa": {
     "title": "Autenticación de dos factores",
