--- a/frontend/public/locales/nl/auth.json
+++ b/frontend/public/locales/nl/auth.json
@@ -19,7 +19,8 @@
     "accountDisabled": "Uw account is uitgeschakeld. Neem contact op met uw beheerder.",
     "invalidMfaResponse": "Ongeldige MFA-respons van server",
     "ldapFailed": "LDAP-authenticatie mislukt",
-    "accountPendingApproval": "Account aangemaakt maar wacht op goedkeuring van beheerder. Neem contact op met uw beheerder."
+    "accountPendingApproval": "Account aangemaakt maar wacht op goedkeuring van beheerder. Neem contact op met uw beheerder.",
+    "genericError": "Er is een fout opgetreden"
   },
   "mfa": {
     "title": "Tweefactorauthenticatie",
