--- a/frontend/public/locales/ru/auth.json
+++ b/frontend/public/locales/ru/auth.json
@@ -19,7 +19,8 @@
     "accountDisabled": "Ваша учётная запись отключена. Обратитесь к администратору.",
     "invalidMfaResponse": "Неверный ответ MFA от сервера",
     "ldapFailed": "Ошибка аутентификации LDAP",
-    "accountPendingApproval": "Учётная запись создана, но ожидает одобрения. Обратитесь к администратору."
+    "accountPendingApproval": "Учётная запись создана, но ожидает одобрения. Обратитесь к администратору.",
+    "genericError": "Произошла ошибка"
   },
   "mfa": {
     "title": "Двухфакторная аутентификация",
