--- a/frontend/public/locales/zh/auth.json
+++ b/frontend/public/locales/zh/auth.json
@@ -19,7 +19,8 @@
     "accountDisabled": "您的账户已被禁用。请联系管理员。",
     "invalidMfaResponse": "MFA 响应无效",
     "ldapFailed": "LDAP 身份验证失败",
-    "accountPendingApproval": "账户已创建，等待管理员批准。请联系管理员。"
+    "accountPendingApproval": "账户已创建，等待管理员批准。请联系管理员。",
+    "genericError": "发生错误"
   },
   "mfa": {
     "title": "双因素身份验证",
