--- a/frontend/public/locales/nl/admin.json
+++ b/frontend/public/locales/nl/admin.json
@@ -999,6 +999,7 @@
         "fromEmail": "Afzender e-mail",
         "fromName": "Afzendernaam",
         "domain": "Domein",
+        "region": "Regio",
         "monthlyLimit": "Maandlimiet",
         "skipTlsVerify": "TLS-certificaatverificatie overslaan (onveilig, niet aanbevolen)"
       },
@@ -1018,7 +1019,9 @@
         "smtp": "SMTP",
         "encryptionNone": "Geen (Poort 25)",
         "encryptionStarttls": "STARTTLS (Poort 587)",
-        "encryptionTls": "TLS/SSL (Poort 465)"
+        "encryptionTls": "TLS/SSL (Poort 465)",
+        "regionUS": "VS (api.mailgun.net)",
+        "regionEU": "EU (api.eu.mailgun.net)"
       },
       "buttons": {
         "edit": "Configuratie bewerken",
