fix(frontend): resolve SSL/TLS certificate issues
Fixes #4

## Changes

- **Remove certificate warning page**: Delete CertificateCheck.tsx component
  that caused mixed content blocking (HTTP fetch from HTTPS page)
- **Add CA download to user profile**: Move CA certificate download to
  Profile Settings page under new Security section
- **Fix certbot permissions**: Change webroot ownership from www-data:www-data
  to krakenhashes:www-data so backend can write ACME challenge files
- **Add i18n translations**: Add security section translations for all 6
  supported languages (en, de, es, nl, ru, zh)
- **Update documentation**: Add WebSocket warning about silent certificate
  rejection and update CA download instructions

## Technical Details

- Browser mixed content blocking prevented HTTP CA cert fetch from HTTPS pages
- WSS connections silently reject untrusted certificates (no user prompt)
- Certbot http-01 challenge requires write access by krakenhashes user

--- a/frontend/public/locales/de/settings.json
+++ b/frontend/public/locales/de/settings.json
@@ -92,6 +92,15 @@
       "copied": "API-Schlüssel in die Zwischenablage kopiert"
     }
   },
+  "security": {
+    "title": "Sicherheit",
+    "caCertificate": {
+      "title": "CA-Zertifikat",
+      "description": "Bei Verwendung von selbstsignierten Zertifikaten laden Sie das CA-Zertifikat herunter und installieren Sie es, um diesem Server zu vertrauen.",
+      "download": "CA-Zertifikat herunterladen",
+      "docsLink": "SSL/TLS-Dokumentation anzeigen"
+    }
+  },
   "common": {
     "cancel": "Abbrechen",
     "never": "Nie",
