--- a/frontend/public/locales/ru/settings.json
+++ b/frontend/public/locales/ru/settings.json
@@ -92,6 +92,15 @@
       "copied": "API-ключ скопирован в буфер обмена"
     }
   },
+  "security": {
+    "title": "Безопасность",
+    "caCertificate": {
+      "title": "Сертификат CA",
+      "description": "При использовании самоподписанных сертификатов загрузите и установите сертификат CA, чтобы доверять этому серверу.",
+      "download": "Скачать сертификат CA",
+      "docsLink": "Просмотреть документацию SSL/TLS"
+    }
+  },
   "common": {
     "cancel": "Отмена",
     "never": "Никогда",
